--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
   "homepage": "https://github.com/timmy277/BE_Timmy_DoAn#readme",
   "description": "",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.3",
