--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 MONGODB_URI = mongodb+srv://timmy:mrtuan277@timmy.o0dfs.mongodb.net/PJ_Timmy_DB?retryWrites=true&w=majority&appName=Timmy
+TOKEN_SECRET_KEY = "FALLENTIMMY"
+FRONTEND_URL = http://localhost:5173
