--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.3",
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
+    "stripe": "^16.12.0"
   }
 }
